fixed broken css

--- a/trunk/htdocs/core/css/templates/ps/headings.css
+++ b/trunk/htdocs/core/css/templates/ps/headings.css
@@ -31,7 +31,7 @@ h3.emboldened, #landing #main h3 { position: relative; color: #8e0018; border-bo
 
 #landing #feature h3 a { color: #8e0018; text-decoration: none; }
 
-#rhs h3 {  background: url(/core/gfx/bars-120724.png) 0 bottom; border-bottom: 1px solid #ccc; }
+#rhs h3 {  background: url(/core/gfx/templates/ps/bars-120724.png) 0 bottom; border-bottom: 1px solid #ccc; }
 .callout h2 { color: #fff; }
 
 h4, h5 { margin: 8px 0; margin: 0 10px; font-size: 1em; }
